K8s/db-ds.yml
---
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - image: postgres:15
        name: postgresql
        ports:
        - containerPort: 5432
          name: postgresql
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec:
  ports:
  - port: 5432
  selector:
    app: postgresql
